chore: update to go1.20

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@ branches:
   only:
   - master
 language: go
-go:
-  - 1.14.x
-  - 1.15.x
+go: 1.20.x
 dist: bionic
 install:
   - go get -t -v ./...
-  - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b ${TRAVIS_HOME}/bin v1.33.0
+  - go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.53.3
   - pyenv global 3.8
   - pip install --user mkdocs-material
 script:
